fixed flash card sizing on mobile

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,8 +1,11 @@
-﻿
+﻿.collection {
+    overflow-y:scroll;
+}
 .collection-item {
     display: flex;
     margin-bottom: 0.5rem;
     width: 100%;
+    height:100%;
     font-size: 1.8rem;
     border: 0.1rem solid var(--borderShadow);
     background-color: var(--antiqueWhite);
